--- a/app/src/main/res/layout/item_recipe_card.xml
+++ b/app/src/main/res/layout/item_recipe_card.xml
@@ -4,55 +4,61 @@
     android:id="@+id/card_recipe"
     style="@style/CardListItem">
 
-    <android.support.constraint.ConstraintLayout
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
-
+        android:layout_height="match_parent"
+        android:orientation="vertical">
         <ImageView
             android:id="@+id/iv_card_recipe_image"
             android:layout_width="match_parent"
-            android:layout_height="@dimen/card_image_height"
+            android:layout_height="0dp"
+            android:layout_weight="1"
             android:contentDescription="@string/recipe_image_description"
             android:scaleType="centerCrop"
             android:src="@mipmap/ingredients" />
 
-        <TextView
-            android:id="@+id/tv_recipe_name"
-            style="@style/CardTitle"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/iv_card_recipe_image" />
+        <android.support.constraint.ConstraintLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
 
-        <ImageView
-            android:id="@+id/iv_clock"
-            android:layout_width="@dimen/card_timer_icon_size"
-            android:layout_height="@dimen/card_timer_icon_size"
-            android:layout_marginBottom="@dimen/space_one_unit"
-            android:layout_marginStart="@dimen/space_one_unit"
-            android:contentDescription="@string/timer_icon"
-            android:src="@android:drawable/ic_lock_idle_alarm"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintStart_toStartOf="parent" />
+            <TextView
+                android:id="@+id/tv_recipe_title"
+                style="@style/CardTitle"
+                app:layout_constraintBottom_toTopOf="@+id/iv_clock"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
 
-        <TextView
-            android:id="@+id/tv_card_cook_time"
-            style="@style/CardCookTime"
-            android:layout_marginBottom="@dimen/space_one_unit"
-            android:layout_marginStart="@dimen/space_half_unit"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintStart_toEndOf="@+id/iv_clock" />
+            <ImageView
+                android:id="@+id/iv_clock"
+                android:layout_width="@dimen/card_timer_icon_size"
+                android:layout_height="@dimen/card_timer_icon_size"
+                android:layout_marginBottom="@dimen/space_one_unit"
+                android:layout_marginStart="@dimen/space_one_unit"
+                android:contentDescription="@string/timer_icon"
+                android:src="@android:drawable/ic_lock_idle_alarm"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintStart_toStartOf="parent" />
 
-        <RatingBar
-            android:id="@+id/ratingBar"
-            style="?android:attr/ratingBarStyleSmall"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_margin="@dimen/space_one_unit"
-            android:isIndicator="true"
-            android:numStars="5"
-            android:stepSize="0.1"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent" />
+            <TextView
+                android:id="@+id/tv_card_cook_time"
+                style="@style/CardCookTime"
+                android:layout_marginBottom="@dimen/space_one_unit"
+                android:layout_marginStart="@dimen/space_half_unit"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintStart_toEndOf="@+id/iv_clock" />
 
-    </android.support.constraint.ConstraintLayout>
+            <RatingBar
+                android:id="@+id/ratingBar"
+                style="?android:attr/ratingBarStyleSmall"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_margin="@dimen/space_one_unit"
+                android:isIndicator="true"
+                android:numStars="5"
+                android:stepSize="0.1"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent" />
 
+        </android.support.constraint.ConstraintLayout>
+    </LinearLayout>
 </android.support.v7.widget.CardView>
