--- a/app/src/main/res/values-land/styles.xml
+++ b/app/src/main/res/values-land/styles.xml
@@ -5,7 +5,7 @@
         <item name="android:layout_height">match_parent</item>
         <item name="android:gravity">center</item>
         <item name="android:layout_marginStart">@dimen/activity_horizontal_margin</item>
-        <item name="android:layout_marginEnd">@dimen/activity_horizontal_margin</item>
+        <item name="android:layout_marginEnd">@dimen/space_half_unit</item>
         <item name="android:layout_marginTop">@dimen/activity_vertical_margin</item>
         <item name="android:layout_marginBottom">@dimen/activity_vertical_margin</item>
         <item name="cardCornerRadius">@dimen/space_one_unit</item>
