--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -56,7 +56,7 @@
         <item name="android:layout_marginStart">@dimen/activity_horizontal_margin</item>
         <item name="android:layout_marginEnd">@dimen/activity_horizontal_margin</item>
         <item name="android:layout_marginTop">@dimen/activity_vertical_margin</item>
-        <item name="android:layout_marginBottom">@dimen/activity_vertical_margin</item>
+        <item name="android:layout_marginBottom">@dimen/space_half_unit</item>
         <item name="cardCornerRadius">@dimen/space_one_unit</item>
     </style>
 
@@ -70,13 +70,14 @@
         <item name="android:inputType">textMultiLine</item>
         <item name="android:maxLines">2</item>
         <item name="android:layout_margin">@dimen/space_one_unit</item>
+        <item name="android:ellipsize">end</item>
     </style>
 
     <style name="CardCookTime">
         <item name="android:layout_width">wrap_content</item>
         <item name="android:layout_height">wrap_content</item>
         <item name="android:layout_gravity">center_horizontal</item>
-        <item name="android:textSize">@dimen/card_detail_size</item>
+        <item name="android:textSize">@dimen/card_cook_time_text_size</item>
         <item name="android:layout_marginStart">@dimen/space_half_unit</item>
         <item name="android:layout_marginEnd">@dimen/space_one_unit</item>
     </style>
