feat: Change colors

--- a/app/src/main/res/drawable/side_nav_bar.xml
+++ b/app/src/main/res/drawable/side_nav_bar.xml
@@ -2,8 +2,8 @@
     android:shape="rectangle">
     <gradient
         android:angle="135"
-        android:centerColor="@color/nav_gradient_center"
-        android:endColor="@color/nav_gradient_end"
-        android:startColor="@color/nav_gradient_start"
+        android:centerColor="@color/primary"
+        android:endColor="@color/primary_dark"
+        android:startColor="@color/primary_light"
         android:type="linear" />
 </shape>
