--- a/app/src/main/res/layout/content_recipe_detail.xml
+++ b/app/src/main/res/layout/content_recipe_detail.xml
@@ -114,7 +114,7 @@
             android:layout_height="@dimen/recipe_detail_button_heights"
             android:layout_marginEnd="@dimen/activity_horizontal_margin"
             android:layout_marginTop="@dimen/space_one_unit"
-            android:background="@color/colorAccent"
+            android:background="@color/accent"
             android:text="@string/decrement"
             android:textColor="@color/btn_text"
             app:layout_constraintEnd_toStartOf="@id/tv_servings"
@@ -136,7 +136,7 @@
             android:layout_width="@dimen/recipe_detail_button_heights"
             android:layout_height="@dimen/recipe_detail_button_heights"
             android:layout_marginStart="@dimen/activity_horizontal_margin"
-            android:background="@color/colorAccent"
+            android:background="@color/accent"
             android:text="@string/increment"
             android:textColor="@color/btn_text"
             app:layout_constraintStart_toEndOf="@id/tv_servings"
@@ -219,6 +219,7 @@
 
         <RatingBar
             android:id="@+id/ratingBar"
+            android:theme="@style/RatingBar"
             style="?android:attr/ratingBarStyleIndicator"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -245,7 +246,7 @@
             android:layout_width="@dimen/recipe_detail_button_widths"
             android:layout_height="@dimen/recipe_detail_button_heights"
             android:layout_marginTop="@dimen/activity_vertical_margin"
-            android:background="@color/colorAccent"
+            android:background="@color/accent"
             android:text="@string/recipe_finished"
             android:textAllCaps="false"
             android:textColor="@color/btn_text"
