--- a/app/src/main/res/layout/fragment_meal_board.xml
+++ b/app/src/main/res/layout/fragment_meal_board.xml
@@ -21,7 +21,7 @@
                 android:id="@android:id/tabs"
                 android:layout_width="@dimen/tab_widget_child_width"
                 android:layout_height="wrap_content"
-                android:background="@color/tab_background" />
+                android:background="@color/primary" />
         </HorizontalScrollView>
 
         <FrameLayout
