--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -4,9 +4,11 @@
     <!--suppress AndroidDomInspection -->
     <style name="AppTheme" parent="Theme.AppCompat.Light.DarkActionBar">
         <!-- Customize your theme here. -->
-        <item name="colorPrimary">@color/colorPrimary</item>
-        <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
-        <item name="colorAccent">@color/colorAccent</item>
+        <item name="colorPrimary">@color/primary</item>
+        <item name="colorPrimaryDark">@color/primary_dark</item>
+        <item name="colorAccent">@color/accent</item>
+        <item name="android:textColorPrimary">@color/primary_text</item>
+        <item name="android:textColorSecondary">@color/secondary_text</item>
     </style>
 
     <style name="AppTheme.NoActionBar">
@@ -16,10 +18,10 @@
     </style>
 
     <style name="LoginTheme" parent="FirebaseUI">
-        <item name="colorPrimary">@color/colorPrimary</item>
-        <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
-        <item name="colorAccent">@color/colorAccent</item>
-        <item name="colorButtonNormal">@color/colorAccent</item>
+        <item name="colorPrimary">@color/primary</item>
+        <item name="colorPrimaryDark">@color/primary_dark</item>
+        <item name="colorAccent">@color/accent</item>
+        <item name="colorButtonNormal">@color/accent</item>
         <item name="colorControlNormal">@android:color/white</item>
         <item name="colorControlActivated">@android:color/white</item>
         <item name="colorControlHighlight">@android:color/white</item>
@@ -64,7 +66,7 @@
         <item name="android:layout_width">match_parent</item>
         <item name="android:layout_height">wrap_content</item>
         <item name="android:textSize">@dimen/card_title_text_size</item>
-        <item name="android:textColor">@color/card_title_text_color</item>
+        <item name="android:textColor">@color/primary_text</item>
         <item name="android:textStyle">bold</item>
         <item name="android:layout_gravity">center_horizontal|start</item>
         <item name="android:inputType">textMultiLine</item>
@@ -86,18 +88,24 @@
         <item name="android:layout_width">wrap_content</item>
         <item name="android:layout_height">wrap_content</item>
         <item name="android:layout_marginTop">@dimen/activity_vertical_margin</item>
-        <item name="android:textColor">@color/colorAccent</item>
+        <item name="android:textColor">@color/accent</item>
         <item name="android:textSize">@dimen/spinner_headers_text_size</item>
     </style>
 
     <style name="DataLabels">
         <item name="android:textSize">@dimen/data_labels_text_size</item>
-        <item name="android:textColor">@color/label_text_color</item>
+        <item name="android:textColor">@color/primary_text</item>
         <item name="android:textStyle">bold</item>
     </style>
 
     <style name="DataTexts">
         <item name="android:textSize">@dimen/data_texts_text_size</item>
-        <item name="android:textColor">@color/data_text_color</item>
+        <item name="android:textColor">@color/primary_text</item>
+    </style>
+
+    <!--suppress AndroidDomInspection -->
+    <style name="RatingBar" parent="Theme.AppCompat">
+        <item name="colorControlNormal">@color/rating_stars_passive</item>
+        <item name="colorControlActivated">@color/rating_stars_active</item>
     </style>
 </resources>
