--- a/app/src/main/res/menu/menu_recipe_detail_bookable.xml
+++ b/app/src/main/res/menu/menu_recipe_detail_bookable.xml
@@ -7,6 +7,11 @@
         android:title="@string/share"
         app:showAsAction="ifRoom" />
     <item
+        android:id="@+id/app_bar_bookmark"
+        android:icon="@drawable/ic_bookmark"
+        android:title="@string/bookmark"
+        app:showAsAction="ifRoom" />
+    <item
         android:id="@+id/app_bar_board"
         android:icon="@drawable/ic_menu_board_white"
         android:title="@string/meal_board"
