--- a/app/src/main/res/layout/item_ingredient.xml
+++ b/app/src/main/res/layout/item_ingredient.xml
@@ -17,7 +17,7 @@
 
     <TextView
         android:id="@+id/tv_ingredient"
-        style="@style/DataTexts"
+        style="@style/TextStyleData"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="@dimen/space_one_unit"
