--- a/app/src/main/res/layout/item_step.xml
+++ b/app/src/main/res/layout/item_step.xml
@@ -7,7 +7,7 @@
 
     <TextView
         android:id="@+id/tv_step_number"
-        style="@style/DataLabels"
+        style="@style/TextStyleDataLabel"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textSize="@dimen/bullet_text_size"
@@ -17,7 +17,7 @@
 
     <TextView
         android:id="@+id/tv_step"
-        style="@style/DataTexts"
+        style="@style/TextStyleData"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="@dimen/space_one_unit"
