--- a/app/src/main/res/layout/fragment_ingredients.xml
+++ b/app/src/main/res/layout/fragment_ingredients.xml
@@ -1,29 +1,105 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
     tools:context=".fragments.IngredientsFragment">
 
-    <EditText
-        android:id="@+id/edit_text"
+    <android.support.constraint.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:hint="Food"
-        android:inputType="text" />
+        android:layout_height="wrap_content">
 
-    <EditText
-        android:id="@+id/edit_text_conversion"
+        <TextView
+            android:id="@+id/header_food"
+            style="@style/TextStyleSpinnerHeader"
+            android:layout_marginStart="@dimen/activity_vertical_margin"
+            android:layout_marginTop="@dimen/activity_vertical_margin"
+            android:text="@string/food"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
+        <com.toptoche.searchablespinnerlibrary.SearchableSpinner
+            android:id="@+id/spinner_food"
+            android:layout_width="@dimen/spinner_width"
+            android:layout_height="wrap_content"
+            app:layout_constraintStart_toStartOf="@+id/header_food"
+            app:layout_constraintTop_toBottomOf="@+id/header_food" />
+
+        <Button
+            android:id="@+id/tv_add_food_link"
+            style="@style/ButtonStyleLink"
+            android:layout_width="wrap_content"
+            android:layout_marginStart="@dimen/activity_horizontal_margin"
+            android:text="@string/add_food_hint"
+            app:layout_constraintBottom_toTopOf="@+id/header_food"
+            app:layout_constraintStart_toEndOf="@+id/spinner_food"
+            app:layout_constraintTop_toBottomOf="@+id/spinner_food" />
+
+        <android.support.design.widget.TextInputLayout
+            android:id="@+id/input_layout_amount"
+            android:layout_width="@dimen/spinner_width"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="@dimen/activity_vertical_margin"
+            app:layout_constraintStart_toStartOf="@+id/spinner_food"
+            app:layout_constraintTop_toBottomOf="@+id/spinner_food">
+
+            <EditText
+                android:id="@+id/text_edit_amount"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:hint="@string/amount"
+                android:imeOptions="actionDone"
+                android:inputType="number"
+                android:maxLength="@integer/max_length_amount"
+                android:selectAllOnFocus="true"
+                android:singleLine="true" />
+        </android.support.design.widget.TextInputLayout>
+
+        <TextView
+            android:id="@+id/header_measure"
+            style="@style/TextStyleSpinnerHeader"
+            android:layout_marginStart="@dimen/activity_vertical_margin"
+            android:text="@string/measure"
+            app:layout_constraintStart_toEndOf="@id/input_layout_amount"
+            app:layout_constraintTop_toBottomOf="@+id/spinner_food" />
+
+        <Spinner
+            android:id="@+id/spinner_measure"
+            android:layout_width="@dimen/spinner_width"
+            android:layout_height="wrap_content"
+            app:layout_constraintStart_toStartOf="@+id/header_measure"
+            app:layout_constraintTop_toBottomOf="@+id/header_measure" />
+
+        <Button
+            android:id="@+id/btn_add_ingredient"
+            android:layout_width="@dimen/recipe_detail_button_widths"
+            android:layout_height="@dimen/recipe_detail_button_heights"
+            android:layout_marginTop="@dimen/activity_vertical_margin"
+            android:background="@color/accent"
+            android:text="@string/add_food"
+            android:textAllCaps="false"
+            android:textColor="@color/btn_text"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/input_layout_amount" />
+
+        <View
+            android:id="@+id/divider"
+            android:layout_width="match_parent"
+            android:layout_height="@dimen/empty_frame_outline_thickness"
+            android:layout_marginTop="@dimen/activity_vertical_margin"
+            android:background="?android:attr/listDivider"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/btn_add_ingredient" />
+
+    </android.support.constraint.ConstraintLayout>
+
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/rv_ingredients"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:hint="Multiplier"
-        android:inputType="numberDecimal" />
-
-    <Button
-        android:id="@+id/btn_add"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="add" />
-
+        android:layout_height="0dp"
+        android:layout_weight="1" />
 </LinearLayout>
