feat: Change background picture of FirebaseUI

--- a/app/src/main/res/layout/activity_recipe_detail.xml
+++ b/app/src/main/res/layout/activity_recipe_detail.xml
@@ -30,7 +30,7 @@
                 android:layout_height="match_parent"
                 android:contentDescription="@string/recipe_image_description"
                 android:scaleType="centerCrop"
-                android:src="@mipmap/ingredients"
+                android:src="@drawable/ingredients"
                 app:layout_collapseMode="parallax"
                 app:layout_collapseParallaxMultiplier="0.5" />
 
