--- a/app/src/main/res/layout/item_ingredient.xml
+++ b/app/src/main/res/layout/item_ingredient.xml
@@ -7,7 +7,7 @@
     <RelativeLayout
         android:id="@+id/swiped_background"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
         android:background="@color/swiped_list_item_background">
 
         <ImageView
@@ -32,34 +32,38 @@
 
     </RelativeLayout>
 
-    <android.support.constraint.ConstraintLayout
+    <LinearLayout
         android:id="@+id/view_foreground"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="match_parent"
         android:background="@color/swiped_list_item_foreground"
-        android:padding="@dimen/space_one_unit">
+        android:orientation="horizontal">
 
         <ImageView
             android:id="@+id/iv_bullet"
             android:layout_width="@dimen/bullet_size"
             android:layout_height="@dimen/bullet_size"
+            android:layout_gravity="center"
+            android:layout_marginStart="@dimen/space_one_unit"
             android:contentDescription="@string/bullet"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
             app:srcCompat="@drawable/ic_dot" />
+
+        <TextView
+            android:id="@+id/tv_ingredient_amount"
+            style="@style/TextStyleData"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:layout_marginStart="@dimen/space_one_unit"
+            android:layout_weight="1" />
 
         <TextView
             android:id="@+id/tv_ingredient"
             style="@style/TextStyleData"
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="@dimen/space_one_unit"
-            android:layout_marginEnd="@dimen/space_one_unit"
-            android:layout_marginStart="@dimen/space_two_units"
-            android:layout_marginTop="@dimen/space_one_unit"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintStart_toEndOf="@+id/iv_bullet"
-            app:layout_constraintTop_toTopOf="parent" />
-    </android.support.constraint.ConstraintLayout>
+            android:layout_gravity="center"
+            android:layout_marginStart="@dimen/space_one_unit"
+            android:layout_weight="3" />
+    </LinearLayout>
 </FrameLayout>
