--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -18,5 +18,5 @@
     <color name="image_tint_gradient_end">#96000000</color>
     <color name="swiped_list_item_foreground">#FFFFFF</color>
     <color name="swiped_list_item_background">#a1887f</color>
-    <color name="swiped_list_item_background_text">#fff</color>z
+    <color name="swiped_list_item_background_text">#fff</color>
 </resources>
