--- a/app/src/main/res/drawable/ic_bookmark.xml
+++ b/app/src/main/res/drawable/ic_bookmark.xml
@@ -2,10 +2,11 @@
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
     android:width="24dp"
     android:height="24dp"
-    android:viewportHeight="1792"
-    android:viewportWidth="1792">
+    android:viewportHeight="48"
+    android:viewportWidth="48">
 
     <path
         android:fillColor="#FFFFFF"
-        android:pathData="M1420 128q23 0 44 9 33 13 52.5 41t19.5 62v1289q0 34-19.5 62t-52.5 41q-19 8-44 8-48 0-83-32l-441-424-441 424q-36 33-83 33-23 0-44-9-33-13-52.5-41t-19.5-62v-1289q0-34 19.5-62t52.5-41q21-9 44-9h1048z" />
+        android:pathData="M34 6h-20c-2.21 0-3.98 1.79-3.98 4l-0.02 32 14-6 14 6v-32c0-2.21-1.79-4-4-4zm0 30l-10-4.35-10 4.35v-26h20v26z" />
+    <path android:pathData="M0 0h48v48h-48z" />
 </vector>
