--- a/app/src/main/res/layout/fragment_overall.xml
+++ b/app/src/main/res/layout/fragment_overall.xml
@@ -34,14 +34,14 @@
 
                 <ImageView
                     android:id="@+id/iv_cam_icon"
-                    android:layout_width="@dimen/list_button_size"
-                    android:layout_height="@dimen/list_button_size"
+                    android:layout_width="@dimen/add_picture_hint_size"
+                    android:layout_height="@dimen/add_picture_hint_size"
                     android:contentDescription="@string/add_a_picture"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toTopOf="parent"
-                    app:srcCompat="@android:drawable/ic_menu_camera" />
+                    app:srcCompat="@drawable/accent_image" />
 
                 <TextView
                     android:id="@+id/tv_hint_click_to_add"
@@ -76,10 +76,10 @@
                     android:id="@+id/btn_rotate"
                     android:layout_width="@dimen/list_button_size"
                     android:layout_height="@dimen/list_button_size"
-                    android:layout_marginStart="@dimen/activity_horizontal_margin"
+                    android:layout_marginStart="@dimen/space_one_unit"
                     android:background="@android:color/transparent"
                     android:contentDescription="@string/rotate_image"
-                    android:src="@android:drawable/ic_menu_rotate"
+                    app:srcCompat="@drawable/accent_rotate"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintStart_toStartOf="parent" />
 
@@ -90,7 +90,7 @@
                     android:layout_marginBottom="@dimen/activity_vertical_margin"
                     android:background="@android:color/transparent"
                     android:contentDescription="@string/upload"
-                    android:src="@android:drawable/ic_menu_upload"
+                    app:srcCompat="@drawable/accent_cloud"
                     app:layout_constraintBottom_toTopOf="@id/btn_rotate"
                     app:layout_constraintStart_toStartOf="@+id/btn_rotate" />
 
