--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -40,4 +40,5 @@
     <dimen name="recipe_detail_button_widths">256dp</dimen>
     <dimen name="recipe_detail_button_heights">48dp</dimen>
     <dimen name="bullet_size">16dp</dimen>
+    <dimen name="add_picture_hint_size">72dp</dimen>
 </resources>
